Add hostname_list variable to use instead of status.HostIP to define multiple endpoints
Signed-off-by: Aaron Wilson <aawilson@nvidia.com>

--- a/playbooks/roles/ais_deploy_cluster/templates/ais.yaml.j2
+++ b/playbooks/roles/ais_deploy_cluster/templates/ais.yaml.j2
@@ -18,6 +18,7 @@ spec:
       enabled: true
 {% if protocol == "https" %}
     net:
+      hostname_list: {{ hostname_list }}
       http:
         server_crt: "/var/certs/tls.crt"
         server_key: "/var/certs/tls.key"
